--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -32,6 +32,8 @@ $bootstrap-sass-asset-helper: false;
 @import "components/posts";
 @import "components/primary-content";
 @import "components/parallax-section";
+@import "components/thumb";
+@import "components/modals";
 
 // Page Templates
 //==================================================================
