--- a/assets/sass/page-templates/_page-home.scss
+++ b/assets/sass/page-templates/_page-home.scss
@@ -3,22 +3,39 @@
 	section.section {
 		position: relative;
 
+		[class^="col-"] {
+			position: static;
+		}
+
+		.thumb {
+			@include media-query (sm) {
+				position: absolute;
+				top: 50%;
+				margin-top: -114px;
+			}
+		}
+
 		.section-header {
 
 			.title {
 				@include font-size(30px, 30px);
+				line-height: 1;
 				color: #fff;
 				font-weight: bold;
+				margin-top: 168px;
 
 				@include media-query (sm) {
 					position: absolute;
-					top: -58px;
+					top: -38px;
 					margin: 0;
 					@include font-size(40px, 40px);
+					line-height: 1;
 				}
 
 				@include media-query (md) {
-					@include font-size(60px, 60px);
+					top: -56px;
+					@include font-size(58px, 60px);
+					line-height: 1;
 				}
 			}
 		}
@@ -26,17 +43,17 @@
 		&.section1 .title {
 
 			@include media-query (sm) {
-				top: -126px;
+				top: -83px;
 			}
 
 			@include media-query (md) {
-				top: -126px;
+				top: -122px;
 			}
 		}
 
 		.section-content {
 			@include rem('padding-top', 20px);
-			@include rem('padding-bottom', 20px);
+			@include rem('padding-bottom', 80px);
 
 			@include media-query (sm) {
 				@include rem('padding-top', 50px);
@@ -47,7 +64,6 @@
 				@include rem('padding-top', 100px);
 				@include rem('padding-bottom', 100px);
 			}
-
 		}
 	}
 
