--- a/assets/sass/components/_masthead.scss
+++ b/assets/sass/components/_masthead.scss
@@ -2,9 +2,48 @@
 	width: 100%;
 	background: rgba(255,255,255,.8);
 	border: none;
+	@include transition(.2s);
 
 	@include media-query (sm) {
 		position: fixed;
+		top: 0;
+	}
+
+	.navbar-logo {
+		width: 220px;
+		display: block;
+		@include transition(.2s);
+
+		img {
+			width: 100%;
+			height: auto;
+		}
+	}
+
+	.navbar-toggle {
+		@include transition(.2s);
+
+		.icon-bar {
+			@include transition(.2s);
+		}
+	}
+
+	&.fixed {
+
+		.navbar-logo {
+			width: 130px;
+		}
+
+		.navbar-toggle {
+			right: 0;
+			top: 26px;
+			@include rem('padding', 6px);
+
+			.icon-bar {
+				width: 30px;
+				height: 6px;
+			}
+		}
 	}
 
 }
