--- a/assets/sass/components/_parallax-section.scss
+++ b/assets/sass/components/_parallax-section.scss
@@ -1,12 +1,20 @@
 .parallax-section {
 	width: 100%;
-	height: 358px;
-	background-attachment: fixed;
+	height: 250px;
+	// background-attachment: fixed;
 	background-position: center top;
-	background-size: 100% auto;
+	background-size: cover;
 
+	@media (min-width: 440px ) {
+		height: 340px;
+	}
+
+	@media (min-width: 689px ) {
+		height: 400px;
+	}
 	@include media-query (sm) {
 		height: 500px;
+		background-attachment: fixed;
 	}
 	@include media-query (md) {
 		height: 578px;
@@ -18,26 +26,40 @@
 	}
 
 	&.parallax-section1 {
-		height: 206px;
+		height: 310px;
+		margin-top: -50px;
 		background-attachment: scroll;
 
 		@media (min-width: 440px ) {
-			height: 252px;
+			height: 748px;
 		}
 
-		@media (min-width: 689px ) {
-			height: 447px;
-		}
+		// @media (min-width: 689px ) {
+		// 	height: 618px;
+		// }
 
 		@include media-query (sm) {
-			height: 468px;
 			background-attachment: fixed;
 			background-position: center top;
 			background-repeat: no-repeat;
 		}
 
 		@include media-query (md) {
-			height: 668px;
+			height: 800px;
+		}
+
+		.container {
+			position: relative;
+
+			.thumb {
+				left: 0;
+				top: 200px;
+				position: absolute;
+
+				&:hover {
+					top: 200px;
+				}
+			}
 		}
 	}
 }
