--- a/assets/sass/elements/_fonts.scss
+++ b/assets/sass/elements/_fonts.scss
@@ -1,3 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=EB+Garamond);
+@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
 
 
