--- a/assets/sass/includes/_settings.scss
+++ b/assets/sass/includes/_settings.scss
@@ -56,7 +56,7 @@
 
 		// Headings
 		//--------------------------------------------------------------*/
-		$header_font_family: 'Helvetica', sans-serif;
+		$header_font_family: 'Yanone Kaffeesatz', sans-serif;
 		$header_font_weight: normal;
 		$header_font_style: normal;
 		$header_line_height: 1.3;
