--- a/assets/sass/components/_content.scss
+++ b/assets/sass/components/_content.scss
@@ -1,3 +1,13 @@
 .content {
 	color: #fff;
 }
+
+.read-more {
+	display: block;
+	margin-top: 30px;
+	color: #fff;
+
+	&:hover {
+		color: #fff;
+	}
+}
