--- a/assets/sass/components/_thumb.scss
+++ b/assets/sass/components/_thumb.scss
@@ -36,6 +36,7 @@
 		// margin-left: -105px;
 		display: none;
 		background-color: #e1023a !important;
+		background-size: cover;
 
 		@include media-query (sm) {
 			display: block;
