--- a/assets/sass/page-templates/_page-home.scss
+++ b/assets/sass/page-templates/_page-home.scss
@@ -2,6 +2,7 @@
 
 	section.section {
 		position: relative;
+		@include box-shadow(0 0 7px 2px rgba(0, 0, 0, 0.5));
 
 		[class^="col-"] {
 			position: static;
@@ -30,12 +31,20 @@
 					margin: 0;
 					@include font-size(40px, 40px);
 					line-height: 1;
+
+					@-moz-document url-prefix() {
+						top: -35px;
+					}
 				}
 
 				@include media-query (md) {
 					top: -56px;
 					@include font-size(58px, 60px);
 					line-height: 1;
+
+					@-moz-document url-prefix() {
+						top: -51px;
+					}
 				}
 			}
 		}
@@ -44,10 +53,18 @@
 
 			@include media-query (sm) {
 				top: -83px;
+
+				@-moz-document url-prefix() {
+					top: -81px;
+				}
 			}
 
 			@include media-query (md) {
 				top: -122px;
+
+				@-moz-document url-prefix() {
+					top: -117px;
+				}
 			}
 		}
 
